ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-ingress-class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: wisecow.192.168.58.2.nip.io
    http:
      paths:
      - path: /.well-known/acme-challenge/
        pathType: ImplementationSpecific
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
  tls:
  - hosts:
    - wisecow.192.168.58.2.nip.io
    secretName: wisecow-tls
